--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -8,7 +8,7 @@
       text-align:center;
       font-family: 'Slabo 27px', serif;
       height:100vh;
-    }
+dkjasbdkjasbdkjasbdkjsb    }
     .vertical-center {
 
       position:relative;
