--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -8,7 +8,7 @@
       text-align:center;
       font-family: 'Slabo 27px', serif;
       height:100vh;
-dkjasbdkjasbdkjasbdkjsb    }
+    }
     .vertical-center {
 
       position:relative;
@@ -22,7 +22,7 @@ dkjasbdkjasbdkjasbdkjsb    }
 </head>
 <body>
   <div class="vertical-center">
-    <h1>Welcome 2 the Daniel Test App</h1>
+    <h1>Welcome to the Sparta Test App</h1>
     <img src="/images/squarelogo.jpg" />
     <h2>The app is running correctly.</h2>
 
